--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grunt-svgstore",
+  "name": "ee-grunt-svgstore",
   "description": "Merge SVGs from a folder.",
-  "version": "0.4.1",
+  "version": "0.4.1-fork.2",
   "homepage": "https://github.com/FWeinb/grunt-svgstore",
   "author": {
     "name": "Fabrice Weinberg",
